@@ -1,3 +1,8 @@
+2019-03-27 Magnus Hagdorn
+ * piccolo3/client/Piccolo.py: observe changes of status
+ * piccolo3/client/__init__.py: gather all piccolo client objects into a
+   single object
+
 2019-03-26 Magnus Hagdorn
  * piccolo3/client/PiccoloSpectrometer.py: expose list of spectrometers and
  channels; add callback to get notifications when a value changed
